# drf-auth

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
a_project/: asgi.py  settings.py  urls.py  wsgi.py
a_users/: admin.py  apps.py  models.py  tests.py
a_users/migrations/: 0001_initial.py
concert/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
concert/migrations/: 0001_initial.py
staticfiles/admin/css/: autocomplete.css  changelists.css  login.css  nav_sidebar.css  responsive.css  responsive_rtl.css  rtl.css  widgets.css
